--- a/index.html
+++ b/index.html
@@ -36,14 +36,49 @@
         <ul id="menu-list" class="hidden">
             <li><a href="#">Beranda</a></li>
             <li><a href="#">Lapor</a></li>
-            <li><a href="">Pedoman dan Prosedur SMI</a></li>
-            <li><a href="">Agenda Sosialisasi PK</a></li>
-            <li><a href="">Kebijakan & Saran</a></li>
-            <li><a href="">Eviden</a></li>
-            <li><a href="">Lainnya</a></li>
+            <li class="dropdown">
+                <a href="#">Pedoman dan Prosedur SMI <i class="fa-solid fa-caret-down"></i></a>
+                <ul class="dropdown-content">
+                    <li><a href="#">Pedoman SMI</a></li>
+                    <li><a href="#">Prosedur SMI</a></li>
+                    <li><a href="#">Formulir SMI</a></li>
+                    <li><a href="#">IKK</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="">Agenda Sosialisasi PK <i class="fa-solid fa-caret-down"></i></a>
+                <ul class="dropdown-content">
+                    <li><a href="#">Audit Internal</a></li>
+                    <li><a href="#">Audit Eksternal</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="">Kebijakan & Sasaran <i class="fa-solid fa-caret-down"></i></a>
+                <ul class="dropdown-content">
+                    <li><a href="#">Kebijakan</a></li>
+                    <li><a href="#">Sasaran</a></li>
+                    <li><a href="#">Pedoman Prosedur & Formulir</a></li>
+                    <li><a href="#">Struktur</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="">Eviden <i class="fa-solid fa-caret-down"></i></a>
+                <ul class="dropdown-content">
+                    <li><a href="#">Eviden 45001</a></li>
+                    <li><a href="#">Eviden 9001</a></li>
+                    <li><a href="#">Eviden 37001</a></li>
+                    <li><a href="#">Manual SNI ISO</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="">Lainnya <i class="fa-solid fa-caret-down"></i></a>
+                <ul class="dropdown-content">
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Cara Melapor</a></li>
+                </ul>
+            </li>
         </ul>
-    </nav>
-    <!-- navbar end -->
+    </nav> <!-- navbar end -->
 
     <!-- bg -->
     <figure class="mybg">
@@ -61,7 +96,8 @@
                             Gratifikasi
                         </h6>
                         <p>
-                            Untuk pengguna yang ingin berkomitmen dalam menjalankan tugas dengan jujur, transparan, dan
+                            Untuk pengguna yang ingin berkomitmen dalam menjalankan tugas dengan jujur, transparan,
+                            dan
                             tanpa
                             korupsi di lingkungan BPMSPH. anda bisa mengisi formulir pakta integritas ini.
                         </p>
@@ -76,6 +112,70 @@
                 </div>
             </div>
         </div>
+
+        <!-- Tutor -->
+        <div class="tutorial">
+            <div class="tutorial-header">
+                <h2>CARA MENGISI FORMULIR PAKTA INTEGRITAS</h2>
+                <br>
+                <p>Anda dapat membuat surat Pakta Integritas dengan cara berikut:</p>
+            </div>
+            <div class="tutorial-container">
+                <div class="tutorial-main">
+                    <div class="tutorial-title-container">
+                        <div class="tutorial-icon">
+                            <i class="fa-solid fa-globe"></i>
+                        </div>
+                        <h4>Buka Website</h4>
+                        <br>
+                        <div class="tutorial-content-container">
+                            <p>Anda dapat membuat surat pakta integritas di website smi bpmsph</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="tutorial-main">
+                    <div class="tutorial-title-container">
+                        <div class="tutorial-icon">
+                            <i class="fa-brands fa-readme"></i>
+                        </div>
+                        <h4>Membaca Perjanjian</h4>
+                        <br>
+                        <div class="tutorial-content-container">
+                            <p>Anda dapat mengklik “lihat perjanjian” untuk mengetahui isi perjanjian dari
+                                masing-masing
+                                peran</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="tutorial-main">
+                    <div class="tutorial-title-container">
+                        <div class="tutorial-icon">
+                            <i class="fa-solid fa-clipboard-list"></i>
+                        </div>
+                        <h4>Memilih Peran</h4>
+                        <br>
+                        <div class="tutorial-content-container">
+                            <p>Anda dapat memilih peran sesuai dengan peran/jabatan anda sendiri</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="tutorial-main">
+                    <div class="tutorial-title-container">
+                        <div class="tutorial-icon">
+                            <i class="fa-regular fa-pen-to-square"></i>
+                        </div>
+                        <h4>Buka Website</h4>
+                        <br>
+                        <div class="tutorial-content-container">
+                            <p>Anda dapat mengisi identitas anda pada formulir, lalu kirim dan surat dapat di
+                                download
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- tutor end -->
 
         <!-- Role -->
         <div class="role" id="role">
@@ -176,7 +276,8 @@
                     <div class="role-close-btn-2" onclick="togglePopup('role-popup-2')"><i
                             class="fa-solid fa-circle-xmark"></i></div>
                     <h3>SYARAT DAN KETENTUAN PENYEDIA JASA</h3>
-                    <p>Menyatakan bahwa saya dengan sungguh-sungguh dalam rangka pelaksanaan pemeriksaan dan pengujian
+                    <p>Menyatakan bahwa saya dengan sungguh-sungguh dalam rangka pelaksanaan pemeriksaan dan
+                        pengujian
                         di BPMSPH bersedia menjalankan dan mentaati hal-hal seperti yang tertulis dibawah ini:</p>
                     <br>
                     <ol>
@@ -194,7 +295,8 @@
                             kegiatan sebagai penyedia jasa; </li>
                         <li>Akan menyampaikan informasi penyimpangan integritas serta turut menjaga kerahasiaan atas
                             pelanggaran peraturan yang dilaporkannya; </li>
-                        <li>Bila saya melanggar hal-hal tersebut di atas, saya siap menghadapi konsekuensi berdasarkan
+                        <li>Bila saya melanggar hal-hal tersebut di atas, saya siap menghadapi konsekuensi
+                            berdasarkan
                             ketentuan dan perundang-undangan yang berlaku.</li>
                     </ol>
                 </div>
@@ -205,7 +307,8 @@
                     <div class="role-close-btn-3" onclick="togglePopup('role-popup-3')"><i
                             class="fa-solid fa-circle-xmark"></i></div>
                     <h3>SYARAT DAN KETENTUAN PENGGUNA JASA</h3>
-                    <p>Menyatakan bahwa saya dengan sungguh-sungguh akan menjalankan dan mentaati hal-hal seperti yang
+                    <p>Menyatakan bahwa saya dengan sungguh-sungguh akan menjalankan dan mentaati hal-hal seperti
+                        yang
                         tertulis dibawah ini:</p>
                     <br>
                     <ol>
@@ -220,77 +323,14 @@
                             kegiatan sebagai pengguna jasa;</li>
                         <li>Akan menyampaikan informasi penyimpangan integritas serta turut menjaga kerahasiaan atas
                             pelanggaran peraturan yang dilaporkannya;</li>
-                        <li>Bila saya melanggar hal-hal tersebut di atas, saya siap menghadapi konsekuensi berdasarkan
+                        <li>Bila saya melanggar hal-hal tersebut di atas, saya siap menghadapi konsekuensi
+                            berdasarkan
                             ketentuan dan perundang-undangan yang berlaku.</li>
                     </ol>
                 </div>
             </div>
         </div>
         <!-- Role -->
-
-        <!-- Tutor -->
-        <div class="tutorial">
-            <div class="tutorial-header">
-                <h2>CARA MENGISI FORMULIR</h2>
-                <br>
-                <p>Anda dapat membuat surat Pakta Integritas dengan cara berikut:</p>
-            </div>
-            <div class="tutorial-container">
-                <div class="tutorial-main">
-                    <div class="tutorial-title-container">
-                        <div class="tutorial-icon">
-                            <i class="fa-solid fa-globe"></i>
-                        </div>
-                        <h4>Buka Website</h4>
-                        <br>
-                        <div class="tutorial-content-container">
-                            <p>Anda dapat membuat surat pakta integritas di website smi bpmsph</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="tutorial-main">
-                    <div class="tutorial-title-container">
-                        <div class="tutorial-icon">
-                            <i class="fa-brands fa-readme"></i>
-                        </div>
-                        <h4>Membaca Perjanjian</h4>
-                        <br>
-                        <div class="tutorial-content-container">
-                            <p>Anda dapat mengklik “lihat perjanjian” untuk mengetahui isi perjanjian dari
-                                masing-masing
-                                peran</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="tutorial-main">
-                    <div class="tutorial-title-container">
-                        <div class="tutorial-icon">
-                            <i class="fa-solid fa-clipboard-list"></i>
-                        </div>
-                        <h4>Memilih Peran</h4>
-                        <br>
-                        <div class="tutorial-content-container">
-                            <p>Anda dapat memilih peran sesuai dengan peran/jabatan anda sendiri</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="tutorial-main">
-                    <div class="tutorial-title-container">
-                        <div class="tutorial-icon">
-                            <i class="fa-regular fa-pen-to-square"></i>
-                        </div>
-                        <h4>Buka Website</h4>
-                        <br>
-                        <div class="tutorial-content-container">
-                            <p>Anda dapat mengisi identitas anda pada formulir, lalu kirim dan surat dapat di
-                                download
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- tutor end -->
 
         <!-- isi form -->
         <div class="form">
@@ -303,7 +343,7 @@
                         </div>
                         <div class="form-choice">
                             <p>Pilih Role</p>
-                            <select name="form-role" id="form-role">
+                            <select name="form-role" id="form-role" onchange="showForm()">
                                 <option value="null">---Silahkan Pilih---</option>
                                 <option value="Pegawai">Pegawai</option>
                                 <option value="Penyedia Jasa">Penyedia Jasa</option>
@@ -315,43 +355,71 @@
                         <img src="assets/beranda.png" alt="">
                     </div>
                 </div>
+
+                <!-- Form Container -->
+                <div id="form-container" class="form-container" style="display: none;">
+                    <!-- Form for Pegawai -->
+                    <div id="pegawai-form" class="role-form">
+                        <h3>Form Pegawai</h3>
+                        <div class="form-group">
+                            <label for="nama">Nama:</label>
+                            <input type="text" id="nama" name="nama">
+                        </div>
+                        <div class="form-group">
+                            <label for="jabatan">Jabatan:</label>
+                            <input type="text" id="jabatan" name="jabatan">
+                        </div>
+                        <div class="form-group">
+                            <label for="alamat">Alamat:</label>
+                            <input type="text" id="alamat" name="alamat">
+                        </div>
+                    </div>
+
+                    <!-- Form for Penyedia Jasa -->
+                    <div id="penyedia-jasa-form" class="role-form" style="display: none;">
+                        <h3>Form Penyedia Jasa</h3>
+                        <!-- Add fields specific to Penyedia Jasa here -->
+                    </div>
+
+                    <!-- Form for Pengguna Jasa -->
+                    <div id="pengguna-jasa-form" class="role-form" style="display: none;">
+                        <h3>Form Pengguna Jasa</h3>
+                        <!-- Add fields specific to Pengguna Jasa here -->
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- isi form end -->
-    </main>
-    <!-- Main page end -->
 
-
-    <footer>
-        <div class="footer-container">
-            <div class="footer-address">
-                <h3>Balai Pengujian Mutu dan Sertifikasi Produk Hewan</h3>
-                <p><a href="https://maps.app.goo.gl/FwhEJiirMgLarwDT8"> Jalan Pemuda No 29A Kecamatan Tanah Sareal Kota
-                        Bogor, Jawa Barat </a></p>
-                <p>Email: <a href="mailto:bpmsph@pertanian.go.id">bpmsph@pertanian.go.id</a></p>
-                <p>Tel/Fax: +62-251-8377111, +62-251-8353712</p>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-address">
+                    <h3>Balai Pengujian Mutu dan Sertifikasi Produk Hewan</h3>
+                    <p><a href="https://maps.app.goo.gl/FwhEJiirMgLarwDT8"> Jalan Pemuda No 29A Kecamatan Tanah Sareal
+                            Kota Bogor, Jawa Barat </a></p>
+                    <p>Email: <a href="mailto:bpmsph@pertanian.go.id">bpmsph@pertanian.go.id</a></p>
+                    <p>Tel/Fax: +62-251-8377111, +62-251-8353712</p>
+                </div>
+                <div class="footer-sosmed">
+                    <h3>Sosial Media & Chat</h3>
+                    <ul>
+                        <li><a href="https://web.facebook.com/bpmsph.ditjenpkh.5"><i class="fa-brands fa-facebook"></i>
+                                bpmsph.ditjenpkh.5</a></li>
+                        <li><a href="https://twitter.com/BPMSPH"><i class="fa-brands fa-x-twitter"></i> @BPMSPH</a></li>
+                        <li><a href="https://www.instagram.com/bpmsph_ditjenpkh/"><i class="fa-brands fa-instagram"></i>
+                                @bpmsph_ditjenpkh</a></li>
+                        <li><a href="https://www.youtube.com/@bpmsphbogorkementan231"><i
+                                    class="fa-brands fa-youtube"></i> BPMSPH Bogor Kementan</a></li>
+                        <li><a href="https://wa.me/08111109922"><i class="fa-brands fa-whatsapp"></i> 0811 1109 922</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer-sosmed">
-                <h3>Sosial Media & Chat</h3>
-                <ul>
-                    <li><a href="https://web.facebook.com/bpmsph.ditjenpkh.5"><i class="fa-brands fa-facebook"></i>
-                            bpmsph.ditjenpkh.5</a></li>
-                    <li><a href="https://twitter.com/BPMSPH"><i class="fa-brands fa-x-twitter"></i> @BPMSPH</a></li>
-                    <li><a href="https://www.instagram.com/bpmsph_ditjenpkh/"><i class="fa-brands fa-instagram"></i>
-                            @bpmsph_ditjenpkh</a></li>
-                    <li><a href="https://www.youtube.com/@bpmsphbogorkementan231"><i class="fa-brands fa-youtube"></i>
-                            BPMSPH Bogor Kementan</a></li>
-                    <li><a href="https://wa.me/08111109922"><i class="fa-brands fa-whatsapp"></i> 0811 1109 922</a></li>
-                </ul>
+            <div class="footer-bottom">
+                <p>SNI ISO 9001:2015 - 37001:2016 - 45001:2018 SISTEM MANAJEMEN INTEGRASI - BALAI PENGUJIAN MUTU DAN
+                    SERTIFIKASI PRODUK HEWAN <span>Hak Cipta&copy;2024 BPMSPH. Semua Hak Dilindungi</span></p>
             </div>
-        </div>
-        <div class="footer-bottom">
-            <p>SNI ISO 9001:2015 - 37001:2016 - 45001:2018 SISTEM MANAJEMEN INTEGRASI - BALAI PENGUJIAN MUTU DAN
-                SERTIFIKASI PRODUK HEWAN <span>Hak Cipta&copy;2024 BPMSPH. Semua Hak Dilindungi</span></p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
+        </footer>
+        <script src="script.js"></script>
 
 </body>
 
