--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <!-- Navbar -->
     <nav class="container-navbar">
-        <a href="#">
+        <a href="index.html">
             <div class="logo">
                 <img src="assets/logo smi.png" alt="Logo Image" class="logo-img">
                 <h3>SMI BPMSPH</h3>
@@ -34,7 +34,7 @@
             <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
         </div>
         <ul id="menu-list" class="hidden">
-            <li><a href="#">Beranda</a></li>
+            <li><a href="index.html">Beranda</a></li>
             <li><a href="#">Lapor</a></li>
             <li class="dropdown">
                 <a href="https://sites.google.com/view/smapbpmsph/pedoman-dan-prosedur-mi">Pedoman dan Prosedur SMI <i
